--- a/senior_proj/evals/templates/evals/base.html
+++ b/senior_proj/evals/templates/evals/base.html
@@ -32,9 +32,9 @@
         	<!-- Navbar Right Side -->
         	<div class="navbar-nav">
 			  {% if user.is_authenticated %}
-				<a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+				<!--a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a-->
 				<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-			  {% else%}
+			  {% else %}
           	    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
               {% endif %}
 		     </div>
@@ -43,13 +43,13 @@
       </nav>
    </header>
 
-	 <!-- to use bootsrap classes wrap content in div in content container gives content good padding and spacing -->
+	 <!-- to use bootsrap classes wrap content in div in content container gives content good padding and spacing--> 
 	<main role="main" class="container">
   		<div class="row">
     		<div class="col-md-8">
       			{% block content %}{% endblock %}
     		</div>
-    	<div class="col-md-4">
+   <!-- 	<div class="col-md-4">
       		<div class="content-section">
         	<h3>Our Sidebar</h3>
         	<p class='text-muted'>Choose Team.
@@ -60,7 +60,7 @@
             		<li class="list-group-item list-group-item-light">etc</li>
           		</ul>
         	</p>
-      	   </div>
+      	   </div>-->
     	  </div>
   		</div>
 	</main>
