--- a/senior_proj/evals/templates/evals/logout.html
+++ b/senior_proj/evals/templates/evals/logout.html
@@ -1,7 +1,7 @@
 {% extends "evals/base.html" %}
 {% block content %}
 	<h2>You have been logged out</h2>
-	<div class = "border-tope pt-3">
+	<div class = "border-top pt-3">
 		<small class="text-muted">
 			<a href="{% url 'login' %}">Log In Again</a>
 		</small>
