--- a/senior_proj/evals/templates/evals/projEval.html
+++ b/senior_proj/evals/templates/evals/projEval.html
@@ -5,102 +5,133 @@
 
 {% block content %}
 <h1> Project Evaluation Form </h1>
+<div>
+<form action ="{% url 'projEval' %}" method="POST",action = /"projEval"/>
+	{% csrf_token %}
+	<table>
+	<tr><td>Session: </td>
+		<td>
+      		<select name="dropdown1">
+          		{% for sess in sessions %}
+					<option value="{{ sess.session_Name }}"> {{ sess.session_Name }}</option>
+	   			{% endfor %}
+			</select>
+		</td>
+	</table>
+	<br>
+	<tr><td>Team: </td>
+		<td>
+      		<select name="dropdown2">
+          		{% for sess in sessions %}
+					<option value="{{ sess.group1 }}"> {{ sess.group1}}</option>
+					<option value="{{ sess.group2 }}"> {{ sess.group2}}</option>
+					<option value="{{ sess.group3 }}"> {{ sess.group3}}</option>
+					<option value="{{ sess.group4 }}"> {{ sess.group4}}</option>
+					<option value="{{ sess.group5 }}"> {{ sess.group5}}</option>
+					<option value="{{ sess.group6 }}"> {{ sess.group6}}</option>
+					<option value="{{ sess.group7 }}"> {{ sess.group7}}</option>
+					<option value="{{ sess.group8 }}"> {{ sess.group8}}</option>
+					<option value="{{ sess.group8 }}"> {{ sess.group9}}</option>
+					<option value="{{ sess.group10 }}"> {{ sess.group10}}</option>
+	   			{% endfor %}
+			</select>
+		</td>
 
-<div>	
+	<br><br>
 	<label for "score1" >Technical Accuracy:</label>
-	<input type="radio" name="score[0]" value="uno" required> 1
-	<input type="radio" name="score[0]" value="dos" required> 2
-	<input type="radio" name="score[0]" value="tres" required> 3
-	<input type="radio" name="score[0]" value="cuatro" required> 4
-	<input type="radio" name="score[0]" value="cinco" required> 5
+	<input type="radio" name="score1" value=1 required> 1
+	<input type="radio" name="score1" value=2 required> 2
+	<input type="radio" name="score1" value=3 required> 3
+	<input type="radio" name="score1" value=4 required> 4
+	<input type="radio" name="score1" value=5 required> 5
 	<br>
 	<br>
 	<label for "score2" >Creativity and Innovation:</label>
-	<input type="radio" name="score2" value="uno2" required> 1
-	<input type="radio" name="score2" value="dos2" required> 2
-	<input type="radio" name="score2" value="tres2" required> 3
-	<input type="radio" name="score2" value="cuatro2" required> 4
-	<input type="radio" name="score2" value="cinco2" required> 5
+	<input type="radio" name="score2" value=1 required> 1
+	<input type="radio" name="score2" value=2 required> 2
+	<input type="radio" name="score2" value=3 required> 3
+	<input type="radio" name="score2" value=4 required> 4
+	<input type="radio" name="score2" value=5 required> 5
 	<br>
 	<br>
 	<label for "score3" >Supporting Analytical Work:</label>
-	<input type="radio" name="score3" value="uno3" required> 1
-	<input type="radio"a name="score3" value="dos3" required> 2
-	<input type="radio" name="score3" value="tres3" required> 3
-	<input type="radio" name="score3" value="cuatro3" required> 4
-	<input type="radio" name="score3" value="cinco3" required> 5
+	<input type="radio" name="score3" value=1 required> 1
+	<input type="radio"a name="score3" value=2 required> 2
+	<input type="radio" name="score3" value=3 required> 3
+	<input type="radio" name="score3" value=4 required> 4
+	<input type="radio" name="score3" value=5 required> 5
 	<br>
 	<br>
 	<label for "score4" >Methodical Design Process Demonstrated:</label>
-	<input type="radio" name="score4" value="uno4" required> 1
-	<input type="radio" name="score4" value="dos4" required> 2
-	<input type="radio" name="score4" value="tres4" required> 3
-	<input type="radio" name="score4" value="cuatro4" required> 4
-	<input type="radio" name="score4" value="cinco4" required> 5
+	<input type="radio" name="score4" value=1 required> 1
+	<input type="radio" name="score4" value=2 required> 2
+	<input type="radio" name="score4" value=3 required> 3
+	<input type="radio" name="score4" value=4 required> 4
+	<input type="radio" name="score4" value=5 required> 5
 	<br>
 	<br>
 	<label for "score5" >Addresses Project Complexity Appropriately:</label>
-	<input type="radio" name="score5" value="uno5" required> 1
-	<input type="radio" name="score5" value="dos5" required> 2
-	<input type="radio" name="score5" value="tres5" required> 3
-	<input type="radio" name="score5" value="cuatro5" required> 4
-	<input type="radio" name="score5" value="cinco5" required> 5
+	<input type="radio" name="score5" value=1 required> 1
+	<input type="radio" name="score5" value=2 required> 2
+	<input type="radio" name="score5" value=3 required> 3
+	<input type="radio" name="score5" value=4 required> 4
+	<input type="radio" name="score5" value=5 required> 5
 	<br>
 	<br>
 	<label for "score6" >Expectation of Completion(by term's end):</label>
-	<input type="radio" name="score6" value="uno6" required> 1
-	<input type="radio" name="score6" value="dos6" required> 2
-	<input type="radio" name="score6" value="tres6" required> 3
-	<input type="radio" name="score6" value="cuatro6" required> 4
-	<input type="radio" name="score6" value="cinco6" required> 5
+	<input type="radio" name="score6" value=1 required> 1
+	<input type="radio" name="score6" value=2 required> 2
+	<input type="radio" name="score6" value=3 required> 3
+	<input type="radio" name="score6" value=4 required> 4
+	<input type="radio" name="score6" value=5 required> 5
 	<br>
 	<br>
 	<label for "score7" >Design & Analysis of tests:</label>
-	<input type="radio" name="score7" value="uno7" required> 1
-	<input type="radio" name="score7" value="dos7" required> 2
-	<input type="radio" name="score7" value="tres7" required> 3
-	<input type="radio" name="score7" value="cuatro7" required> 4
-	<input type="radio" name="score7" value="cinco7" required> 5
+	<input type="radio" name="score7" value=1 required> 1
+	<input type="radio" name="score7" value=2 required> 2
+	<input type="radio" name="score7" value=3 required> 3
+	<input type="radio" name="score7" value=4 required> 4
+	<input type="radio" name="score7" value=5 required> 5
 	<br>
 	<br>
 	<label for "score8" >Quality of Response during Q&A:</label>
-	<input type="radio" name="score8" value="uno8" required> 1
-	<input type="radio" name="score8" value="dos8" required> 2
-	<input type="radio" name="score8" value="tres8" required> 3
-	<input type="radio" name="score8" value="cuatro8" required> 4
-	<input type="radio" name="score8" value="cinco8" required> 5
+	<input type="radio" name="score8" value=1 required> 1
+	<input type="radio" name="score8" value=2 required> 2
+	<input type="radio" name="score8" value=3 required> 3
+	<input type="radio" name="score8" value=4 required> 4
+	<input type="radio" name="score8" value=5 required> 5
 	<br>
 	<br>
 	<label for "score9" >Organization:</label>
-	<input type="radio" name="score9" value="uno9" required> 1
-	<input type="radio" name="score9" value="dos9" required> 2
-	<input type="radio" name="score9" value="tres9" required> 3
-	<input type="radio" name="score9" value="cuatro9" required> 4
-	<input type="radio" name="score9" value="cinco9" required> 5
+	<input type="radio" name="score9" value=1 required> 1
+	<input type="radio" name="score9" value=2 required> 2
+	<input type="radio" name="score9" value=3 required> 3
+	<input type="radio" name="score9" value=4 required> 4
+	<input type="radio" name="score9" value=5 required> 5
 	<br>
 	<br>
 	<label for "score10" >Use of Alloted Time:</label>
-	<input type="radio" name="score10" value="uno10" required> 1
-	<input type="radio" name="score10" value="dos10" required> 2
-	<input type="radio" name="score10" value="tres10" required> 3
-	<input type="radio" name="score10" value="cuatro10" required> 4
-	<input type="radio" name="score10" value="cinco10" required> 5
+	<input type="radio" name="score10" value=1 required> 1
+	<input type="radio" name="score10" value=2 required> 2
+	<input type="radio" name="score10" value=3 required> 3
+	<input type="radio" name="score10" value=4 required> 4
+	<input type="radio" name="score10" value=5 required> 5
 	<br>
 	<br>
 	<label for "score11" >Visual Aids:</label>
-	<input type="radio" name="score11" value="uno11" required> 1
-	<input type="radio" name="score11" value="dos11" required> 2
-	<input type="radio" name="score11" value="tres11" required> 3
-	<input type="radio" name="score11" value="cuatro11" required> 4
-	<input type="radio" name="score11" value="cinco11" required> 5
+	<input type="radio" name="score11" value=1 required> 1
+	<input type="radio" name="score11" value=2 required> 2
+	<input type="radio" name="score11" value=3 required> 3
+	<input type="radio" name="score11" value=4 required> 4
+	<input type="radio" name="score11" value=5 required> 5
 	<br>
 	<br>
 	<label for "score12" >Confidence & Poise:</label>
-	<input type="radio" name="score12" value="uno12" required> 1
-	<input type="radio" name="score12" value="dos12" required> 2
-	<input type="radio" name="score12" value="tres12" required> 3
-	<input type="radio" name="score12" value="cuatro12" required> 4
-	<input type="radio" name="score12" value="cinco12" required> 5
+	<input type="radio" name="score12" value=1 required> 1
+	<input type="radio" name="score12" value=2 required> 2
+	<input type="radio" name="score12" value=3 required> 3
+	<input type="radio" name="score12" value=4 required> 4
+	<input type="radio" name="score12" value=5 required> 5
 	<br>
 	<br>
 	<!--input type="submit" value="submit"-->
